# bevy_gauge_macros

./: Cargo.toml  README.md
src/: define_tags_impl.rs  lib.rs  named_impl.rs  proc_stats_impl.rs  simple_stat_derived_impl.rs  stat_component_impl.rs
